assets/css/style.scss
---
---

@import "plain";

{% if site.plainwhite.search %}
  @import "search";
{% endif %}

{%- if site.plainwhite.dark_mode -%}
  @import "toggle";
  @import "dark";
{%- endif -%}

#profile-image {
  border-radius: 100px;
}

.post { 
  text-align: justify;
}

